# simple_kv_store

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: inmemory.rs  kubernetes.rs  lib.rs  sqlite.rs
