[package]
name = "simple_kv_store"
version = "0.1.2"
edition = "2021"
publish = true
description = "Provides a generic, async-friendly key-value store abstraction supporting multiple backends (inmemory, sqlite, kubernetes)"
repository = "https://github.com/schaze/simple_kv_store"
license = "MIT"
authors = ["schaze <schazet@gmail.com>"]
readme = "README.md"
keywords = ["kubernetes", "sqlite", "key_value", "store", "persistence"]

[dependencies]
kube = { version = "0.98.0", features=["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = [ "v1_28"] }
tokio = {version = "1.42.0", features = [ "full"]}
serde_json = "1.0.138"
rusqlite = { version = "0.33.0", features = ["bundled"] }
base64 = "0.22.1"
serde = "1.0.217"
